python/src/radarkit/_ctypes_.py


struct_rk_moment_worker.__slots__ = [
    'name',
    'id',
    'tid',
    'parent',
    'semaphoreName',
    'tic',
    'pid',
    'dutyBuff',
    'dutyCycle',
    'lag',
    'sem',
]
struct_rk_moment_worker._fields_ = [
    ('name', RKChildName),
    ('id', c_int),
    ('tid', pthread_t),
    ('parent', POINTER(RKMomentEngine)),
    ('semaphoreName', c_char * int(32)),
    ('tic', uint64_t),
    ('pid', uint32_t),
    ('dutyBuff', c_double * int(1000)),
    ('dutyCycle', c_double),
    ('lag', c_float),
    ('sem', POINTER(sem_t)),
]

struct_rk_moment_engine.__slots__ = [
    'name',
    'radarDescription',
    'configBuffer',
    'configIndex',
    'pulseBuffer',
    'pulseIndex',
    'rayBuffer',
    'rayIndex',
    'doneIndex',
    'oldIndex',
    'fftModule',
    'userModule',
    'verbose',
    'coreCount',
    'coreOrigin',
    'useOldCodes',
    'useSemaphore',
    'excludeBoundaryPulses',
    'noiseEstimator',
    'momentProcessor',
    'calibrator',
    'momentSource',
    'workers',
    'tidPulseGatherer',
    'mutex',
    'processorLagCount',
    'processorFFTOrder',
    'userLagChoice',
    'business',
    'processedPulseIndex',
    'statusBuffer',
    'rayStatusBuffer',
    'statusBufferIndex',
    'rayStatusBufferIndex',
    'state',
    'tic',
    'lag',
    'minWorkerLag',
    'maxWorkerLag',
    'almostFull',
    'memoryUsage',
]
struct_rk_moment_engine._fields_ = [
    ('name', RKName),
    ('radarDescription', POINTER(RKRadarDesc)),
    ('configBuffer', POINTER(RKConfig)),
    ('configIndex', POINTER(uint32_t)),
    ('pulseBuffer', RKBuffer),
    ('pulseIndex', POINTER(uint32_t)),
    ('rayBuffer', RKBuffer),
    ('rayIndex', POINTER(uint32_t)),
    ('doneIndex', uint32_t),
    ('oldIndex', uint32_t),
    ('fftModule', POINTER(RKFFTModule)),
    ('userModule', RKUserModule),
    ('verbose', uint8_t),
    ('coreCount', uint8_t),
    ('coreOrigin', uint8_t),
    ('useOldCodes', c_bool),
    ('useSemaphore', c_bool),
    ('excludeBoundaryPulses', c_bool),
    ('noiseEstimator', CFUNCTYPE(UNCHECKED(c_int), POINTER(RKMomentScratch), POINTER(POINTER(RKPulse)), uint16_t)),
    ('momentProcessor', CFUNCTYPE(UNCHECKED(c_int), POINTER(RKMomentScratch), POINTER(POINTER(RKPulse)), uint16_t)),
    ('calibrator', CFUNCTYPE(UNCHECKED(None), RKUserModule, POINTER(RKMomentScratch))),
    ('momentSource', POINTER(RKModuloPath)),
    ('workers', POINTER(RKMomentWorker)),
    ('tidPulseGatherer', pthread_t),
    ('mutex', pthread_mutex_t),
    ('processorLagCount', uint8_t),
    ('processorFFTOrder', uint8_t),
    ('userLagChoice', uint8_t),
    ('business', uint32_t),
    ('processedPulseIndex', uint32_t),
    ('statusBuffer', (c_char * int(256)) * int(10)),
    ('rayStatusBuffer', (c_char * int(256)) * int(10)),
    ('statusBufferIndex', uint32_t),
    ('rayStatusBufferIndex', uint32_t),
    ('state', RKEngineState),
    ('tic', uint64_t),
    ('lag', c_float),
    ('minWorkerLag', c_float),
    ('maxWorkerLag', c_float),
    ('almostFull', uint32_t),
    ('memoryUsage', c_size_t),
]

# RKMomentEngine.h: 90
if _libs["radarkit"].has("RKMomentEngineInit", "cdecl"):
    RKMomentEngineInit = _libs["radarkit"].get("RKMomentEngineInit", "cdecl")
    RKMomentEngineInit.argtypes = []
    RKMomentEngineInit.restype = POINTER(RKMomentEngine)

# RKMomentEngine.h: 91
if _libs["radarkit"].has("RKMomentEngineFree", "cdecl"):
    RKMomentEngineFree = _libs["radarkit"].get("RKMomentEngineFree", "cdecl")
    RKMomentEngineFree.argtypes = [POINTER(RKMomentEngine)]
    RKMomentEngineFree.restype = None

# RKMomentEngine.h: 93
if _libs["radarkit"].has("RKMomentEngineSetVerbose", "cdecl"):
    RKMomentEngineSetVerbose = _libs["radarkit"].get("RKMomentEngineSetVerbose", "cdecl")
    RKMomentEngineSetVerbose.argtypes = [POINTER(RKMomentEngine), c_int]
    RKMomentEngineSetVerbose.restype = None

# RKMomentEngine.h: 94
if _libs["radarkit"].has("RKMomentEngineSetEssentials", "cdecl"):
    RKMomentEngineSetEssentials = _libs["radarkit"].get("RKMomentEngineSetEssentials", "cdecl")
    RKMomentEngineSetEssentials.argtypes = [POINTER(RKMomentEngine), POINTER(RKRadarDesc), POINTER(RKFFTModule), POINTER(RKConfig), POINTER(uint32_t), RKBuffer, POINTER(uint32_t), RKBuffer, POINTER(uint32_t)]
    RKMomentEngineSetEssentials.restype = None

# RKMomentEngine.h: 98
if _libs["radarkit"].has("RKMomentEngineSetInputOutputBuffers", "cdecl"):
    RKMomentEngineSetInputOutputBuffers = _libs["radarkit"].get("RKMomentEngineSetInputOutputBuffers", "cdecl")
    RKMomentEngineSetInputOutputBuffers.argtypes = [POINTER(RKMomentEngine), POINTER(RKRadarDesc), POINTER(RKConfig), POINTER(uint32_t), RKBuffer, POINTER(uint32_t), RKBuffer, POINTER(uint32_t)]
    RKMomentEngineSetInputOutputBuffers.restype = None

# RKMomentEngine.h: 103
if _libs["radarkit"].has("RKMomentEngineSetFFTModule", "cdecl"):
    RKMomentEngineSetFFTModule = _libs["radarkit"].get("RKMomentEngineSetFFTModule", "cdecl")
    RKMomentEngineSetFFTModule.argtypes = [POINTER(RKMomentEngine), POINTER(RKFFTModule)]
    RKMomentEngineSetFFTModule.restype = None

# RKMomentEngine.h: 104
if _libs["radarkit"].has("RKMomentEngineSetCalibrator", "cdecl"):
    RKMomentEngineSetCalibrator = _libs["radarkit"].get("RKMomentEngineSetCalibrator", "cdecl")
    RKMomentEngineSetCalibrator.argtypes = [POINTER(RKMomentEngine), CFUNCTYPE(UNCHECKED(None), RKUserModule, POINTER(RKMomentScratch)), RKUserModule]
    RKMomentEngineSetCalibrator.restype = None

# RKMomentEngine.h: 105
if _libs["radarkit"].has("RKMomentEngineUnsetCalibrator", "cdecl"):
    RKMomentEngineUnsetCalibrator = _libs["radarkit"].get("RKMomentEngineUnsetCalibrator", "cdecl")
    RKMomentEngineUnsetCalibrator.argtypes = [POINTER(RKMomentEngine)]
    RKMomentEngineUnsetCalibrator.restype = None

# RKMomentEngine.h: 106
if _libs["radarkit"].has("RKMomentEngineSetCoreCount", "cdecl"):
    RKMomentEngineSetCoreCount = _libs["radarkit"].get("RKMomentEngineSetCoreCount", "cdecl")
    RKMomentEngineSetCoreCount.argtypes = [POINTER(RKMomentEngine), uint8_t]
    RKMomentEngineSetCoreCount.restype = None

# RKMomentEngine.h: 107
if _libs["radarkit"].has("RKMomentEngineSetCoreOrigin", "cdecl"):
    RKMomentEngineSetCoreOrigin = _libs["radarkit"].get("RKMomentEngineSetCoreOrigin", "cdecl")
    RKMomentEngineSetCoreOrigin.argtypes = [POINTER(RKMomentEngine), uint8_t]
    RKMomentEngineSetCoreOrigin.restype = None

# RKMomentEngine.h: 108
if _libs["radarkit"].has("RKMomentEngineSetExcludeBoundaryPulses", "cdecl"):
    RKMomentEngineSetExcludeBoundaryPulses = _libs["radarkit"].get("RKMomentEngineSetExcludeBoundaryPulses", "cdecl")
    RKMomentEngineSetExcludeBoundaryPulses.argtypes = [POINTER(RKMomentEngine), c_bool]
    RKMomentEngineSetExcludeBoundaryPulses.restype = None

# RKMomentEngine.h: 109
if _libs["radarkit"].has("RKMomentEngineSetNoiseEstimator", "cdecl"):
    RKMomentEngineSetNoiseEstimator = _libs["radarkit"].get("RKMomentEngineSetNoiseEstimator", "cdecl")
    RKMomentEngineSetNoiseEstimator.argtypes = [POINTER(RKMomentEngine), CFUNCTYPE(UNCHECKED(c_int), POINTER(RKMomentScratch), POINTER(POINTER(RKPulse)), uint16_t)]
    RKMomentEngineSetNoiseEstimator.restype = None

# RKMomentEngine.h: 110
if _libs["radarkit"].has("RKMomentEngineSetMomentProcessor", "cdecl"):
    RKMomentEngineSetMomentProcessor = _libs["radarkit"].get("RKMomentEngineSetMomentProcessor", "cdecl")
    RKMomentEngineSetMomentProcessor.argtypes = [POINTER(RKMomentEngine), CFUNCTYPE(UNCHECKED(c_int), POINTER(RKMomentScratch), POINTER(POINTER(RKPulse)), uint16_t)]
    RKMomentEngineSetMomentProcessor.restype = None

# RKMomentEngine.h: 111
if _libs["radarkit"].has("RKMomentEngineSetMomentProcessorToPulsePair", "cdecl"):
    RKMomentEngineSetMomentProcessorToPulsePair = _libs["radarkit"].get("RKMomentEngineSetMomentProcessorToPulsePair", "cdecl")
    RKMomentEngineSetMomentProcessorToPulsePair.argtypes = [POINTER(RKMomentEngine)]
    RKMomentEngineSetMomentProcessorToPulsePair.restype = None

# RKMomentEngine.h: 112
if _libs["radarkit"].has("RKMomentEngineSetMomentProcessorToPulsePairHop", "cdecl"):
    RKMomentEngineSetMomentProcessorToPulsePairHop = _libs["radarkit"].get("RKMomentEngineSetMomentProcessorToPulsePairHop", "cdecl")
    RKMomentEngineSetMomentProcessorToPulsePairHop.argtypes = [POINTER(RKMomentEngine)]
    RKMomentEngineSetMomentProcessorToPulsePairHop.restype = None

# RKMomentEngine.h: 113
if _libs["radarkit"].has("RKMomentEngineSetMomentPRocessorToPulsePairATSR", "cdecl"):
    RKMomentEngineSetMomentPRocessorToPulsePairATSR = _libs["radarkit"].get("RKMomentEngineSetMomentPRocessorToPulsePairATSR", "cdecl")
    RKMomentEngineSetMomentPRocessorToPulsePairATSR.argtypes = [POINTER(RKMomentEngine)]
    RKMomentEngineSetMomentPRocessorToPulsePairATSR.restype = None

# RKMomentEngine.h: 114
if _libs["radarkit"].has("RKMomentEngineSetMomentProcessorToMultiLag2", "cdecl"):
    RKMomentEngineSetMomentProcessorToMultiLag2 = _libs["radarkit"].get("RKMomentEngineSetMomentProcessorToMultiLag2", "cdecl")
    RKMomentEngineSetMomentProcessorToMultiLag2.argtypes = [POINTER(RKMomentEngine)]
    RKMomentEngineSetMomentProcessorToMultiLag2.restype = None

# RKMomentEngine.h: 115
if _libs["radarkit"].has("RKMomentEngineSetMomentProcessorToMultiLag3", "cdecl"):
    RKMomentEngineSetMomentProcessorToMultiLag3 = _libs["radarkit"].get("RKMomentEngineSetMomentProcessorToMultiLag3", "cdecl")
    RKMomentEngineSetMomentProcessorToMultiLag3.argtypes = [POINTER(RKMomentEngine)]
    RKMomentEngineSetMomentProcessorToMultiLag3.restype = None

# RKMomentEngine.h: 116
if _libs["radarkit"].has("RKMomentEngineSetMomentProcessorToMultiLag4", "cdecl"):
    RKMomentEngineSetMomentProcessorToMultiLag4 = _libs["radarkit"].get("RKMomentEngineSetMomentProcessorToMultiLag4", "cdecl")
    RKMomentEngineSetMomentProcessorToMultiLag4.argtypes = [POINTER(RKMomentEngine)]
    RKMomentEngineSetMomentProcessorToMultiLag4.restype = None

# RKMomentEngine.h: 117
if _libs["radarkit"].has("RKMomentEngineSetMomentProcessorToSpectral", "cdecl"):
    RKMomentEngineSetMomentProcessorToSpectral = _libs["radarkit"].get("RKMomentEngineSetMomentProcessorToSpectral", "cdecl")
    RKMomentEngineSetMomentProcessorToSpectral.argtypes = [POINTER(RKMomentEngine)]
    RKMomentEngineSetMomentProcessorToSpectral.restype = None

# RKMomentEngine.h: 119
if _libs["radarkit"].has("RKMomentEngineStart", "cdecl"):
    RKMomentEngineStart = _libs["radarkit"].get("RKMomentEngineStart", "cdecl")
    RKMomentEngineStart.argtypes = [POINTER(RKMomentEngine)]
    RKMomentEngineStart.restype = c_int

# RKMomentEngine.h: 120
if _libs["radarkit"].has("RKMomentEngineStop", "cdecl"):
    RKMomentEngineStop = _libs["radarkit"].get("RKMomentEngineStop", "cdecl")
    RKMomentEngineStop.argtypes = [POINTER(RKMomentEngine)]
    RKMomentEngineStop.restype = c_int

# RKMomentEngine.h: 122
if _libs["radarkit"].has("RKMomentEngineGetProcessedRay", "cdecl"):
    RKMomentEngineGetProcessedRay = _libs["radarkit"].get("RKMomentEngineGetProcessedRay", "cdecl")
    RKMomentEngineGetProcessedRay.argtypes = [POINTER(RKMomentEngine), c_bool]
    RKMomentEngineGetProcessedRay.restype = POINTER(RKRay)

# RKMomentEngine.h: 123
if _libs["radarkit"].has("RKMomentEngineFlush", "cdecl"):
    RKMomentEngineFlush = _libs["radarkit"].get("RKMomentEngineFlush", "cdecl")
    RKMomentEngineFlush.argtypes = [POINTER(RKMomentEngine)]
    RKMomentEngineFlush.restype = None

# RKMomentEngine.h: 124
if _libs["radarkit"].has("RKMomentEngineWaitWhileBusy", "cdecl"):
    RKMomentEngineWaitWhileBusy = _libs["radarkit"].get("RKMomentEngineWaitWhileBusy", "cdecl")
    RKMomentEngineWaitWhileBusy.argtypes = [POINTER(RKMomentEngine)]
    RKMomentEngineWaitWhileBusy.restype = None
